--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,24 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .main-svg {
   width: 500px;
   height: 500px;
+}
+
+.container {
+  margin: 1em;
+  display: flex;
+  flex-direction: column;
+  width: auto;
+  font-family: Arial, Helvetica, sans-serif;
+  gap: 1em;
+}
+
+button {
+  width: 100px;
+  margin-bottom: 1em;
 }
