--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 
 .main-svg {
   width: 500px;
-  height: 500px;
+  height: 510px;
 }
 
 .container {
@@ -21,4 +21,20 @@
 button {
   width: 100px;
   margin-bottom: 1em;
+  cursor: pointer;
+  outline: none;
+  padding: 5px 10px;
+  background: #cce3de;
+  border: 2px solid #a4c3b2;
+  border-radius: 5px;
+  transition: all 0.2s ease;
+}
+button:hover {
+  background: #a4c3b2;
+  border: 2px solid #a4c3b2;
+  border-radius: 5px;
+}
+
+circle {
+  transition: all 5s;
 }
